# Learn2Slither

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
save/: 10_sessions.pkl  1_sessions.pkl  models.pkl_100_sessions.pkl
src/: apple.py  board.py  display.py  game.py  q_agent.py  snake.py
