[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Np93 <nico.hir@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
pygame = "^2.6.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
